sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:15: error: value ++ is not a member of Int
    nb_occurence ++;
                 ^